--- a/7-news_fake_real/news_fake_real.ipynb
+++ b/7-news_fake_real/news_fake_real.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1bfac085",
+   "id": "eaf6b4e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a6b65616",
+   "id": "bf27bef2",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ef0ea029",
+   "id": "81b04991",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,17 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e64a34ac",
+   "id": "2a0a30cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[\"label\"] = pd.get_dummies(data[\"label\"], drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c34f35ad",
    "metadata": {},
    "outputs": [
     {
@@ -136,9 +146,9 @@
       "---  ------  --------------  ----- \n",
       " 0   title   6335 non-null   object\n",
       " 1   text    6335 non-null   object\n",
-      " 2   label   6335 non-null   object\n",
-      "dtypes: object(3)\n",
-      "memory usage: 148.6+ KB\n"
+      " 2   label   6335 non-null   uint8 \n",
+      "dtypes: object(2), uint8(1)\n",
+      "memory usage: 105.3+ KB\n"
      ]
     }
    ],
@@ -148,160 +158,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "fc0a2e3b",
+   "execution_count": 6,
+   "id": "990b9ed5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[\"label\"] = pd.get_dummies(data[\"label\"], drop_first=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "9e01f5fa",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>text</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>You Can Smell Hillary’s Fear</td>\n",
-       "      <td>Daniel Greenfield, a Shillman Journalism Fello...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Watch The Exact Moment Paul Ryan Committed Pol...</td>\n",
-       "      <td>Google Pinterest Digg Linkedin Reddit Stumbleu...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Kerry to go to Paris in gesture of sympathy</td>\n",
-       "      <td>U.S. Secretary of State John F. Kerry said Mon...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Bernie supporters on Twitter erupt in anger ag...</td>\n",
-       "      <td>— Kaydee King (@KaydeeKing) November 9, 2016 T...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>The Battle of New York: Why This Primary Matters</td>\n",
-       "      <td>It's primary day in New York and front-runners...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               title  \\\n",
-       "0                       You Can Smell Hillary’s Fear   \n",
-       "1  Watch The Exact Moment Paul Ryan Committed Pol...   \n",
-       "2        Kerry to go to Paris in gesture of sympathy   \n",
-       "3  Bernie supporters on Twitter erupt in anger ag...   \n",
-       "4   The Battle of New York: Why This Primary Matters   \n",
-       "\n",
-       "                                                text  label  \n",
-       "0  Daniel Greenfield, a Shillman Journalism Fello...      0  \n",
-       "1  Google Pinterest Digg Linkedin Reddit Stumbleu...      0  \n",
-       "2  U.S. Secretary of State John F. Kerry said Mon...      1  \n",
-       "3  — Kaydee King (@KaydeeKing) November 9, 2016 T...      0  \n",
-       "4  It's primary day in New York and front-runners...      1  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.head()"
+    "import re"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "70ac306d",
+   "id": "d54f87a6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1    3171\n",
-       "0    3164\n",
-       "Name: label, dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data[\"label\"].value_counts()"
+    "new_text = []"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0a79e3a6",
+   "id": "464ac98c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "cv = CountVectorizer()"
+    "for i in range(6335):\n",
+    "    text = re.sub('[^a-zA-Z]', ' ', data[\"text\"][i])\n",
+    "    text = text.lower()\n",
+    "    new_text.append(text)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6c0a6ed8",
+   "id": "44bf606b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = cv.fit_transform(data[\"text\"])"
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "cv = CountVectorizer()\n",
+    "X = cv.fit_transform(new_text).toarray()\n",
+    "y = data[\"label\"].values"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9cc1b491",
+   "id": "5f96edb0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6335, 67659)"
+       "(6335, 65204)"
       ]
      },
      "execution_count": 10,
@@ -316,112 +226,64 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0d810ee9",
+   "id": "7be0fd2b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = data[\"label\"]"
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ec849216",
+   "id": "1508a0d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split"
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "xgb = XGBClassifier(use_label_encoder=False, eval_metric='mlogloss')\n",
+    "xgb.fit(X_train, y_train)\n",
+    "\n",
+    "ypred = xgb.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fb20a28d",
+   "id": "d52be0f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9368686868686869"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Xtrain,Xtest,ytrain,ytest = train_test_split(X, y, test_size=0.25, random_state=10)"
+    "xgb.score(X_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3c763f5b",
+   "id": "d70a225b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from xgboost import XGBClassifier\n",
-    "xgb = XGBClassifier(use_label_encoder=False, eval_metric='mlogloss')"
+    "from sklearn.metrics import classification_report"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "78828e69",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xgb.fit(Xtrain, ytrain)\n",
-    "ypred = xgb.predict(Xtest)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "09e9a051",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9330808080808081"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "xgb.score(Xtest, ytest)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "7289d9d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import confusion_matrix, classification_report"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "2564128e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[713,  56],\n",
-       "       [ 50, 765]], dtype=int64)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "confusion_matrix(ytest, ypred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "db053b7b",
+   "id": "af25f9db",
    "metadata": {},
    "outputs": [
     {
@@ -430,19 +292,27 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.93      0.93      0.93       769\n",
-      "           1       0.93      0.94      0.94       815\n",
+      "           0       0.93      0.94      0.94       769\n",
+      "           1       0.94      0.94      0.94       815\n",
       "\n",
-      "    accuracy                           0.93      1584\n",
-      "   macro avg       0.93      0.93      0.93      1584\n",
-      "weighted avg       0.93      0.93      0.93      1584\n",
+      "    accuracy                           0.94      1584\n",
+      "   macro avg       0.94      0.94      0.94      1584\n",
+      "weighted avg       0.94      0.94      0.94      1584\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(classification_report(ytest, ypred))"
+    "print(classification_report(y_test, ypred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e99faa12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
